--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -1,32 +1,52 @@
+/* Styles for Storybook Header */
+
 .storybook-header {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 15px 20px;
+  background: #1e2139;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
+/* SVG Styles */
 .storybook-header svg {
   display: inline-block;
   vertical-align: top;
+  margin-right: 10px; /* Add margin for spacing */
 }
 
+/* Header Title Styles */
 .storybook-header h1 {
   font-weight: 700;
   font-size: 20px;
   line-height: 1;
-  margin: 6px 0 6px 10px;
-  display: inline-block;
-  vertical-align: top;
+  margin: 6px 0;
+  color: #fff; /* Adjust the color for better visibility */
 }
 
+/* Button Spacing */
 .storybook-header button + button {
   margin-left: 10px;
 }
 
+.avatar-button {
+  background: none; /* Removes any background */
+  border: none; /* Removes the border */
+  padding: 24px 0; /* Removes padding */
+  cursor: pointer; /* Changes cursor to pointer to indicate it's clickable */
+}
+
+/* Additional Styles for Welcome Message */
 .storybook-header .welcome {
-  color: #333;
+  color: #fff; /* Adjust the color for better visibility */
   font-size: 14px;
   margin-right: 10px;
+}
+
+/* Responsive Design Adjustments */
+@media (max-width: 600px) {
+  .storybook-header h1 {
+    margin-top: 10px;
+  }
 }
