--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -1,28 +1,20 @@
 /* Styles for Storybook Header */
 
 .storybook-header {
-  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   background: #1e2139;
   display: flex;
+  height: 72px;
   align-items: center;
+  max-height: 100%;
   justify-content: space-between;
 }
 
 /* SVG Styles */
-.storybook-header svg {
+.logo-svg {
   display: inline-block;
-  vertical-align: top;
+  padding: 0;
+  margin: 0;
   margin-right: 10px; /* Add margin for spacing */
-}
-
-/* Header Title Styles */
-.storybook-header h1 {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1;
-  margin: 6px 0;
-  color: #fff; /* Adjust the color for better visibility */
 }
 
 /* Button Spacing */
@@ -32,21 +24,25 @@
 
 .avatar-button {
   background: none; /* Removes any background */
-  border: none; /* Removes the border */
-  padding: 24px 0; /* Removes padding */
+  border-left: 1px solid #494e6e; /* Sets only the left border */
+  padding: 1.25rem 24px;
+  height: 100%;
+  border-right: none; /* Removes the right border */
+  border-bottom: none; /* Removes the bottom border */
+  border-top: none; /* Removes the top border */
+  /* Removes padding */
   cursor: pointer; /* Changes cursor to pointer to indicate it's clickable */
 }
 
-/* Additional Styles for Welcome Message */
-.storybook-header .welcome {
-  color: #fff; /* Adjust the color for better visibility */
-  font-size: 14px;
-  margin-right: 10px;
+.mode-toggle-button {
+  background: none; /* Removes any background */
+  border: none; /* Removes the border */
+
+  cursor: pointer; /* Changes cursor to pointer to indicate it's clickable */
 }
 
-/* Responsive Design Adjustments */
-@media (max-width: 600px) {
-  .storybook-header h1 {
-    margin-top: 10px;
-  }
+.left-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
