--- a/src/stories/invoicestatus.css
+++ b/src/stories/invoicestatus.css
@@ -3,16 +3,23 @@
 height: 2.5rem;
 flex-shrink: 0;
     border-radius: 0.375rem;
-
-background: #FF8F00;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-.invoice-status-container p {
+.invoice-status-svg{
+    width: 0.5rem;
+    min-height: 0.5rem;
+    margin: auto 0.5rem;
+}
+
+.invoice-status-text{
     color: #FF8F00;
-font-family: 'League Spartan';
-font-size: 0.9375rem;
-font-style: normal;
-font-weight: 700;
-line-height: 0.9375rem; /* 100% */
-letter-spacing: -0.01563rem;
+    font-family: 'League Spartan';
+    font-size: 0.9375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 0.9375rem; /* 100% */
+    letter-spacing: -0.01563rem;
 }
